...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <ImageView
        android:id="@+id/receptionist"
        android:layout_width="269dp"
        android:layout_height="403dp"
        android:contentDescription="@string/reception"
        android:src="@drawable/receptionist"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1"
...
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />


    <ImageView
        android:id="@+id/parent2"
        android:layout_width="244dp"
        android:layout_height="405dp"
        android:contentDescription="@string/reception"
        android:src="@drawable/mother_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
...
